auth: snake case is_valid
