# apps/context-gpt-backend/src/app/auth/auth.dto.ts
@@ -1,6 +1,11 @@
 import { IsNotEmpty } from 'class-validator';
 
-export class CheckTokenInputDto {
+export class GetAuthValidateOutputDto {
+  @IsNotEmpty()
+  is_valid: boolean;
+}
+
+export class PostAuthLoginInputDto {
   @IsNotEmpty()
   token: string;
 }
